# neo-ai-dlr

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Config.cmake.in  DEVELOPMENT.md  Jenkinsfile  NOTICE  README.md  version.json
.github/: PULL_REQUEST_TEMPLATE.md
aar/: build.gradle  dlr-release.aar  settings.gradle
aar/dlr/: .gitignore  build.gradle
cmake/: Utils.cmake  dlrConfig.cmake.in  dlrConfigVersion.cmake.in  dlrInstall.cmake  googletest-download.cmake  googletest.cmake  neodlrConfig.cmake.in  neodlrConfigVersion.cmake.in  neodlrInstall.cmake
container/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.inf1-mx  Dockerfile.inf1-mx1.8  Dockerfile.inf1-pyt  Dockerfile.inf1-pyt1.10  Dockerfile.inf1-pyt1.11  Dockerfile.inf1-pyt1.8  Dockerfile.inf1-pyt1.9  Dockerfile.inf1-tf  README.md  allocate_workers.py  config-inf1.properties  config.properties  dockerd-entrypoint.sh  inf1_mx_entry.py  inf1_pyt_entry.py  mms_config_mxnet_byom.sh  mms_config_xgboost.sh  neo_template_image_classification.py  neo_template_mxnet_byom.py  neo_template_xgboost.py  neo_utils.py  tag-and-push-inference-containers.sh  util.sh
container/ec2_compilation_container/: Dockerfile  README.md  compile_gluoncv.py  compile_keras.py  compile_tensorflow.py  tvm_ec2_compiler_utils.py
container/sagemaker-pytorch-inferentia-serving/: setup.py
container/sagemaker-tensorflow-inferentia/: Dockerfile.inf1-tf  Dockerfile.inf1-tf2.5  Dockerfile.inf1-tf2.6  Dockerfile.inf1-tf2.7  Dockerfile.inf1-tf2.8
container/sample-inf1/: inf1_mx.py  inf1_pt.py  inf1_tf_handler.py  inf1_tf_io_handler.py  requirements.txt
demo/: README.md
demo/aisage/: README.md  coco.py  coco_list.py  dlr-1.0-py2.py3-none-any.whl  run-mxnet-ssd-mobilenet-512.py  run-mxnet-ssd-resnet50-512.py  run-ssd.py  run-yolov3.py  run_ssd_gluoncv.py  run_yolo_glunocv.py  run_yolo_gluoncv.py  street_small.jpg.npy  tvm-0.6.dev0-py3.5-linux-aarch64.egg
demo/aisage/models/: ssd_mobilenet_v1_0.75_depth_quantized_300x300_coco14_sync_2018_07_18.tflite
demo/cpp/: model_peeker.cc  npy.hpp  run_resnet.cc
doc/: Doxyfile  c-api.rst  conf.py  index.rst  install.rst  python-api.rst  tensorrt.rst
examples/android/image_classification/: README.md  build.gradle  download-dependencies.sh  settings.gradle
examples/android/tvm_compiler/: Dockerfile  README.md  compile_gluoncv.py  compile_keras.py  compile_tensorflow.py  tvm_compiler_utils.py
examples/deepstream/: Makefile  README.md  config_infer_primary.txt  deepstream_app_config.txt  neodlr_plugin.cc  neodlr_plugin.h  nvdsinfer_custom_impl_neodlr.cc
include/: dlr.h  dlr_allocator.h  dlr_common.h  dlr_data_transform.h  dlr_internal.h  dlr_model.h  dlr_pipeline.h  dlr_relayvm.h  dlr_treelite.h  dlr_tvm.h
include/counter/: config.h  counter_mgr.h  device_info.h  helper.h  model_exec_counter.h  model_metric.h  publisher.h  rest_client.h  system.h
include/dlr_hexagon/: dlr_hexagon.h
include/dlr_tensorflow/: dlr_tensorflow.h
include/dlr_tensorflow2/: dlr_tensorflow2.h
include/dlr_tflite/: dlr_tflite.h
install/dlr-1.0-py2.py3-armv7l/: install-py2.sh  install-py3.sh  test-dlr.py
install/dlr-1.0-py2.py3-cuda90-aarch64/: README  install-py2.sh  install-py3.sh  test-dlr.py
install/dlr-1.0-py2.py3-opencl-x86_64/: install-py2.sh  install-py3.sh
python/: meta.py  setup.py
python/dlr/: __init__.py  api.py  compatibility.py  countermgr.py  deviceinfo.py  dlr_model.py  libpath.py  metadata.py  mxnet_model.py  neologger.py  system.py  tf2_model.py  tf_model.py  tflite_model.py
python/dlr/contrib/: xilinx_vai.py
python/dlr/counter/: __init__.py  ccm_config.json  config.py  counter_mgr.py  counter_mgr_lite.py  deviceinfo.py  model_exec_counter.py  model_metric.py  phone_home.py  publisher.py  system.py
python/dlr/runtime/: awsservice.py  config.py
python/test/: test_phone_home.py
sagemaker-neo-notebooks/edge/: README.md
sagemaker-neo-notebooks/edge/TI-sitara/: neo-sitara-tensorflow.ipynb
sagemaker-neo-notebooks/edge/cpp-integration/: CMakeLists.txt  README.md  tutorial.cc
sagemaker-neo-notebooks/edge/jetson-nano/: neo-nano-resnet18.ipynb
sagemaker-neo-notebooks/edge/jetson-tx1/: neo-tx1-resnet50.ipynb
sagemaker-neo-notebooks/edge/jetson-tx2/: neo-tx2-mobilenetv1.ipynb
sagemaker-neo-notebooks/edge/jetson-xavier/: neo-xavier-object-detection.ipynb
sagemaker-neo-notebooks/edge/nxp-imx8qm/: neo-imx8qm-object-detection.ipynb
sagemaker-neo-notebooks/edge/raspberry-pi/: neo-rasb3b-mobilenet.ipynb  neo-rasb3b-object-detection.ipynb
sagemaker-neo-notebooks/edge/test/: CMakeLists.txt  test.cpp
sagemaker-neo-notebooks/edge/windows/: CMakeLists.txt  README.md  image.py  test.py  tutorial.cc  tutorial.sh  windows.cc  windows.cpp
sagemaker-neo-notebooks/edge/windows/include/: npy.hpp
src/: counter_mgr.cc  dlr.cc  dlr_allocator.cc  dlr_common.cc  dlr_data_transform.cc  dlr_model.cc  dlr_pipeline.cc  dlr_relayvm.cc  dlr_treelite.cc  dlr_tvm.cc  model_exec_counter.cc  model_metric.cc  publisher.cc  system.cc
src/counter/: system.cc
src/dlr_hexagon/: dlr_hexagon.cc
src/dlr_tensorflow/: dlr_tensorflow.cc
src/dlr_tensorflow2/: dlr_tensorflow2.cc
src/dlr_tflite/: dlr_tflite.cc
src/jni/: dlr_jni.cc
src/python/: dlr_python.cc
tests/: test_dlc_python_test.py
tests/ci_build/: Dockerfile.cpu_bare  Dockerfile.gpu_bare  Dockerfile.manylinux  build_via_cmake.sh  ci_build.sh  create_wheel.sh  setup_cuda_path.sh
tests/cpp/: dlr_allocator_test.cc  dlr_common_test.cc  dlr_data_transform_test.cc  dlr_elem_test.cc  dlr_pipeline_skl_xgb_test.cc  dlr_pipeline_test.cc  dlr_relayvm_elem_test.cc  dlr_relayvm_test.cc  dlr_test.cc  dlr_treelite_test.cc  dlr_tvm_elem_test.cc  dlr_tvm_test.cc  gen_4in2out.py  test_4in2out.cc  test_utils.hpp
tests/cpp/dlr_hexagon/: dlr_hexagon_test.cc
tests/cpp/dlr_tensorflow/: dlr_tensorflow_internal_test.cc  dlr_tensorflow_test.cc
tests/cpp/dlr_tensorflow2/: dlr_tensorflow2_internal_test.cc  dlr_tensorflow2_test.cc
tests/cpp/dlr_tflite/: dlr_tflite_test.cc  dlr_tflite_uint8_test.cc
tests/cpp/dlsym/: dlr_dlsym_test.cc  dlr_pipeline_app.cc  (+1 more)
(+77 files in other folders)
